# kinematics

./: .gitignore  CMakeLists.txt  package.xml
doc/: Doxyfile
doc/html/: CMakeLists_8txt.html  annotated.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  classes.html  classkinematics_1_1camera-members.html  classkinematics_1_1camera.html  classkinematics_1_1camera__coll__graph.map  classkinematics_1_1camera__coll__graph.md5  classkinematics_1_1camera_a1630594f64c958650bca75f1b26c3ff7_cgraph.map  classkinematics_1_1camera_a1630594f64c958650bca75f1b26c3ff7_cgraph.md5  classkinematics_1_1camera_a6e3b5a31f60b1f36901b76b6c64e869a_icgraph.map  classkinematics_1_1camera_a6e3b5a31f60b1f36901b76b6c64e869a_icgraph.md5  classkinematics_1_1camera_a7ec8e377bb756e6ac743642e1057cff5_cgraph.map  classkinematics_1_1camera_a7ec8e377bb756e6ac743642e1057cff5_cgraph.md5  classkinematics_1_1camera_a7ec8e377bb756e6ac743642e1057cff5_icgraph.map  classkinematics_1_1camera_a7ec8e377bb756e6ac743642e1057cff5_icgraph.md5  classkinematics_1_1camera_a88151fef6b9a103188bddca18000a465_cgraph.map  classkinematics_1_1camera_a88151fef6b9a103188bddca18000a465_cgraph.md5  classkinematics_1_1camera_aba271e67ba9fe2898713dc1dbbcedb81_cgraph.map  classkinematics_1_1camera_aba271e67ba9fe2898713dc1dbbcedb81_cgraph.md5  classkinematics_1_1camera_ae830c47ffd206fa0d2eb8dafd5c11aa2_cgraph.map  classkinematics_1_1camera_ae830c47ffd206fa0d2eb8dafd5c11aa2_cgraph.md5  classkinematics_1_1camera_ae830c47ffd206fa0d2eb8dafd5c11aa2_icgraph.map  classkinematics_1_1camera_ae830c47ffd206fa0d2eb8dafd5c11aa2_icgraph.md5  classkinematics_1_1pose-members.html  classkinematics_1_1pose.html  classkinematics_1_1pose__array-members.html  classkinematics_1_1pose__array.html  classkinematics_1_1pose__array__coll__graph.map  classkinematics_1_1pose__array_add8d65d34c81ec3f008a533a389b6135_cgraph.map  classkinematics_1_1pose__array_add8d65d34c81ec3f008a533a389b6135_cgraph.md5  classkinematics_1_1pose__coll__graph.map  classkinematics_1_1pose_a29e96c04dd74e088c00a522f4b6cbcf9_cgraph.map  classkinematics_1_1pose_a29e96c04dd74e088c00a522f4b6cbcf9_cgraph.md5  classkinematics_1_1pose_a3b4e6c02ccb6479834fafebff24855eb_cgraph.map  (+300 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+28 more)
doc/latex/: CMakeLists_8txt.tex  annotated.tex  camera_8h.tex  camera_8h__dep__incl.md5  camera_8h__incl.md5  classkinematics_1_1camera.tex  classkinematics_1_1camera_a1630594f64c958650bca75f1b26c3ff7_cgraph.md5  classkinematics_1_1camera_a6e3b5a31f60b1f36901b76b6c64e869a_icgraph.md5  classkinematics_1_1camera_a7ec8e377bb756e6ac743642e1057cff5_cgraph.md5  classkinematics_1_1camera_a7ec8e377bb756e6ac743642e1057cff5_icgraph.md5  classkinematics_1_1camera_a88151fef6b9a103188bddca18000a465_cgraph.md5  classkinematics_1_1camera_aba271e67ba9fe2898713dc1dbbcedb81_cgraph.md5  classkinematics_1_1camera_ae830c47ffd206fa0d2eb8dafd5c11aa2_cgraph.md5  classkinematics_1_1camera_ae830c47ffd206fa0d2eb8dafd5c11aa2_icgraph.md5  classkinematics_1_1pose.tex  classkinematics_1_1pose__array.tex  classkinematics_1_1pose__array__coll__graph.md5  classkinematics_1_1pose__array_add8d65d34c81ec3f008a533a389b6135_cgraph.md5  classkinematics_1_1pose__coll__graph.md5  classkinematics_1_1pose_a29e96c04dd74e088c00a522f4b6cbcf9_cgraph.md5  classkinematics_1_1pose_a3b4e6c02ccb6479834fafebff24855eb_cgraph.md5  classkinematics_1_1pose_a5753d2354ac97ba94ffb127cf03bb330_cgraph.md5  classkinematics_1_1pose_aac6dd50a728d773cabfa952969dfdf67_cgraph.md5  classkinematics_1_1pose_aac6dd50a728d773cabfa952969dfdf67_icgraph.md5  classkinematics_1_1pose_abd44246a228f5d32aa098b1f93d057dc_cgraph.md5  classkinematics_1_1pose_abd44246a228f5d32aa098b1f93d057dc_icgraph.md5  classkinematics_1_1pose_adb321e96192e012af765b09bdffc94a3_cgraph.md5  classkinematics_1_1pose_adb321e96192e012af765b09bdffc94a3_icgraph.md5  classkinematics_1_1pose_af8be4fd7c99dca62a5e3fb5ac533c102_icgraph.md5  classkinematics_1_1robot.tex  classkinematics_1_1robot__coll__graph.md5  classkinematics_1_1robot_a522fd26640f89046a4c634a8f0e752d8_cgraph.md5  classkinematics_1_1robot_a59291f3f546ae145da8f052f041fa15b_cgraph.md5  classkinematics_1_1rviz__publisher.tex  classkinematics_1_1rviz__publisher__coll__graph.md5  classkinematics_1_1rviz__publisher_a08c84c260f03208ad5be00d7a456451f_cgraph.md5  classkinematics_1_1rviz__publisher_ab9a4bacdf94e2b7b55615a296c20b00d_cgraph.md5  classkinematics_1_1rviz__publisher_ab9a4bacdf94e2b7b55615a296c20b00d_icgraph.md5  classkinematics_1_1vec3.tex  classkinematics_1_1vec3_a18f9e7a343a97e5ba5a5e83b67ccb190_icgraph.md5  (+127 more)
include/kinematics/: camera.h  kinematics.h  pose.h  pose_array.h  robot.h  vec3.h  vec4.h
include/robot/: bit.h  fpose.h  joint.h  robot.h  sflg.h
include/ros_func/: ros_func.h  ros_marker.h
include/urdf/: urdf.h
launch/: mytest.launch  test.launch  test_camera.rviz  test_pose.rviz  test_pose2.rviz  test_rviz.rviz  test_vec4.rviz
src/: ros_func.cpp  ros_marker.cpp  urdf.cpp  vec.cpp
test/: test3.cpp  test_camera.cpp  test_pose.cpp  test_rviz.cpp  test_urdf.cpp  test_vec4.cpp  utest.cpp  utest_vec3.cpp  utest_vec4.cpp
test/kinematics/: test_camera.cpp  test_pose2.cpp  utest_pose.cpp  utest_vec3.cpp  utest_vec4.cpp
test/old/: test_rviz.cpp
test/robot/: utest_bit.cpp  utest_joint.cpp  utest_sflg.cpp
